--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.17",
     "next": "15.4.6",
     "nodemailer": "^7.0.5",
     "react": "19.1.0",
